# rust-gpu-framework

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/framework/: mod.rs
src/framework/windowed_app/: app.rs  mod.rs
src/framework/windowed_app/gpu/: gpu_wrapper.rs  mod.rs  utilities.rs
src/framework/windowed_app/rendering/: renderer.rs
src/framework/windowed_app/shaders/: fragment.wgsl  vertex.wgsl
src/framework/windowed_app/timers/: frame_timer.rs  mod.rs
src/framework/windowed_app/window/: event_manager.rs  mod.rs  window.rs  window_actions.rs  winit.rs
src/frameworks/: buffer_utils.rs  mod.rs  shader_utils.rs  windowed.rs
